--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <span class="faq-icon">+</span>
           </button>
           <div class="faq-answer-wrapper">
-            <p class="faq-answer">email me at <a href="mailto:contact@solvent.lol" class="faq-link">contact@solvent.lol</a></p>
+            <p class="faq-answer">email me at <a href="mailto:solvent@cock.email" class="faq-link">solvent@cock.email</a></p>
           </div>
         </article>
         <article class="faq-card glass">
