--- a/executors.html
+++ b/executors.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="executors-grid" id="executors-grid">
-        <div class="loading-state">loading executors...</div>
+        <div class="loading-state">loading executors</div>
       </div>
     </section>
   </main>
