--- a/download.html
+++ b/download.html
@@ -60,7 +60,7 @@
           <p class="body">view the source code on github</p>
         </div>
         <div class="download-actions">
-          <a class="btn primary" href="https://github.com/frightnite/solvent.lol-lua" target="_blank" rel="noreferrer">open github</a>
+          <a class="btn primary" href="https://github.com/Xiwx8fons8rV9eNAX6WB96Q92kuj6Cq4g5q2sub/solvent.lol-lua" target="_blank" rel="noreferrer">open github</a>
           <a class="btn ghost" href="license.html">gpl details</a>
         </div>
       </div>
