--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             <p class="card-title">github</p>
             <p class="card-sub">source code</p>
           </div>
-          <a class="btn primary" href="https://github.com/frightnite/solvent.lol-lua" target="_blank" rel="noreferrer">open repo</a>
+          <a class="btn primary" href="https://github.com/Xiwx8fons8rV9eNAX6WB96Q92kuj6Cq4g5q2sub/solvent.lol-lua" target="_blank" rel="noreferrer">open repo</a>
         </div>
         <div class="contact-row">
           <div>
