--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="solvent - a foss roblox script with a modern liquid-glass ui.">
+  <meta property="og:description" content="0_o">
+  <meta name="theme-color" data-react-helmet="true" content=
+  "#000000">
   <title>solvent</title>
   <link rel="icon" type="image/png" href="https://files.catbox.moe/rpqzpf.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
