--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="contact solvent developers">
-  <title>solvent - contact</title>
+  <meta property="og:description" content="0_o">
+  <meta name="theme-color" data-react-helmet="true" content=
+  "#000000">
   <link rel="icon" type="image/png" href="https://files.catbox.moe/rpqzpf.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
