--- a/download.html
+++ b/download.html
@@ -100,11 +100,11 @@
             <p class="panel-track-artist">marjorie w.c sinclair</p>
           </div>
         </article>
-        <article class="music-panel-card" data-track="1" data-src="https://files.catbox.moe/ikvj4s.wav" data-video="" data-title="disorder" data-artist="sematary" data-cover="https://i1.sndcdn.com/artworks-EgPdzG03TCMcz0y4-rtpIHQ-t1080x1080.png">
-          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-EgPdzG03TCMcz0y4-rtpIHQ-t1080x1080.png')"></div>
+        <article class="music-panel-card" data-track="1" data-src="https://files.catbox.moe/tn4nlx.wav" data-video="" data-title="honey bourbon" data-artist="jaydes" data-cover="https://i1.sndcdn.com/artworks-Q8nUU3tt6hNlWNdP-ehWdoA-t1080x1080.jpg">
+          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-Q8nUU3tt6hNlWNdP-ehWdoA-t1080x1080.jpg')"></div>
           <div class="panel-info">
-            <p class="panel-track-title">disorder</p>
-            <p class="panel-track-artist">sematary</p>
+            <p class="panel-track-title">honey bourbon</p>
+            <p class="panel-track-artist">jaydes</p>
           </div>
         </article>
         <article class="music-panel-card" data-track="2" data-src="https://files.catbox.moe/pynknc.wav" data-video="" data-title="brud" data-artist="boolymon" data-cover="https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg">
@@ -120,7 +120,7 @@
 
   <div class="media-tracks" aria-hidden="true">
     <article class="music-card" data-track="0" data-src="https://files.catbox.moe/gaj8c7.wav" data-video="" data-title="reahp" data-artist="marjorie w.c sinclair" data-cover="https://i1.sndcdn.com/artworks-fkS9QjUdEtWtgGtU-0yxyWA-t1080x1080.jpg"></article>
-    <article class="music-card" data-track="1" data-src="https://files.catbox.moe/ikvj4s.wav" data-video="" data-title="disorder" data-artist="sematary" data-cover="https://i1.sndcdn.com/artworks-EgPdzG03TCMcz0y4-rtpIHQ-t1080x1080.png"></article>
+    <article class="music-card" data-track="1" data-src="https://files.catbox.moe/tn4nlx.wav" data-video="" data-title="honey bourbon" data-artist="jaydes" data-cover="https://i1.sndcdn.com/artworks-Q8nUU3tt6hNlWNdP-ehWdoA-t1080x1080.jpg"></article>
     <article class="music-card" data-track="2" data-src="https://files.catbox.moe/pynknc.wav" data-video="" data-title="brud" data-artist="boolymon" data-cover="https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg"></article>
   </div>
 
