--- a/download.html
+++ b/download.html
@@ -6,6 +6,7 @@
   <meta property="og:description" content="0_o">
   <meta name="theme-color" data-react-helmet="true" content=
   "#000000">
+  <title>solvent</title>
   <link rel="icon" type="image/png" href="https://files.catbox.moe/rpqzpf.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
