--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <p class="panel-title">tracks</p>
       </div>
       <div class="music-panel-tracks">
-        <article class="music-panel-card" data-track="0" data-src="penice2me.mp3" data-video="" data-title="penice2me" data-artist="lil watermark" data-cover="https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg">
+        <article class="music-panel-card" data-track="0" data-src="https://files.catbox.moe/7w42g5.mp3" data-video="" data-title="penice2me" data-artist="lil watermark" data-cover="https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg">
           <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg')"></div>
           <div class="panel-info">
             <p class="panel-track-title">penice2me</p>
@@ -171,7 +171,7 @@
   </div>
 
   <div class="media-tracks" aria-hidden="true">
-    <article class="music-card" data-track="0" data-src="penice2me.mp3" data-video="" data-title="penice2me" data-artist="lil watermark" data-cover="https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg"></article>
+    <article class="music-card" data-track="0" data-src="https://files.catbox.moe/7w42g5.mp3" data-video="" data-title="penice2me" data-artist="lil watermark" data-cover="https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg"></article>
     <article class="music-card" data-track="1" data-src="https://files.catbox.moe/tn4nlx.wav" data-video="" data-title="honey bourbon" data-artist="jaydes" data-cover="https://i1.sndcdn.com/artworks-Q8nUU3tt6hNlWNdP-ehWdoA-t1080x1080.jpg"></article>
     <article class="music-card" data-track="2" data-src="https://files.catbox.moe/pynknc.wav" data-video="" data-title="brud" data-artist="boolymon" data-cover="https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg"></article>
   </div>
