--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
             <p class="panel-track-artist">jaydes</p>
           </div>
         </article>
-        <article class="music-panel-card" data-track="2" data-src="https://files.catbox.moe/pynknc.wav" data-video="" data-title="brud" data-artist="boolymon" data-cover="https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg">
-          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg')"></div>
+        <article class="music-panel-card" data-track="2" data-src="https://files.catbox.moe/iokvoi.mp3" data-video="" data-title="feels good" data-artist="maxon" data-cover="https://i1.sndcdn.com/artworks-ynyxWyyy8zmMacbF-S2LRxA-t1080x1080.png">
+          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-ynyxWyyy8zmMacbF-S2LRxA-t1080x1080.png')"></div>
           <div class="panel-info">
-            <p class="panel-track-title">brud</p>
-            <p class="panel-track-artist">boolymon</p>
+            <p class="panel-track-title">feels good</p>
+            <p class="panel-track-artist">maxon</p>
           </div>
         </article>
       </div>
@@ -173,7 +173,7 @@
   <div class="media-tracks" aria-hidden="true">
     <article class="music-card" data-track="0" data-src="https://files.catbox.moe/7w42g5.mp3" data-video="" data-title="penice2me" data-artist="lil watermark" data-cover="https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg"></article>
     <article class="music-card" data-track="1" data-src="https://files.catbox.moe/tn4nlx.wav" data-video="" data-title="honey bourbon" data-artist="jaydes" data-cover="https://i1.sndcdn.com/artworks-Q8nUU3tt6hNlWNdP-ehWdoA-t1080x1080.jpg"></article>
-    <article class="music-card" data-track="2" data-src="https://files.catbox.moe/pynknc.wav" data-video="" data-title="brud" data-artist="boolymon" data-cover="https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg"></article>
+    <article class="music-card" data-track="2" data-src="https://files.catbox.moe/iokvoi.mp3" data-video="" data-title="feels good" data-artist="maxon" data-cover="https://i1.sndcdn.com/artworks-ynyxWyyy8zmMacbF-S2LRxA-t1080x1080.png"></article>
   </div>
 
   <footer class="footer glass">
