--- a/contact.html
+++ b/contact.html
@@ -95,11 +95,11 @@
         <p class="panel-title">tracks</p>
       </div>
       <div class="music-panel-tracks">
-        <article class="music-panel-card" data-track="0" data-src="https://files.catbox.moe/gaj8c7.wav" data-video="" data-title="reahp" data-artist="marjorie w.c sinclair" data-cover="https://i1.sndcdn.com/artworks-fkS9QjUdEtWtgGtU-0yxyWA-t1080x1080.jpg">
-          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-fkS9QjUdEtWtgGtU-0yxyWA-t1080x1080.jpg')"></div>
+        <article class="music-panel-card" data-track="0" data-src="https://files.catbox.moe/7w42g5.mp3" data-video="" data-title="penice2me" data-artist="lil watermark" data-cover="https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg">
+          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg')"></div>
           <div class="panel-info">
-            <p class="panel-track-title">reahp</p>
-            <p class="panel-track-artist">marjorie w.c sinclair</p>
+            <p class="panel-track-title">penice2me</p>
+            <p class="panel-track-artist">lil watermark</p>
           </div>
         </article>
         <article class="music-panel-card" data-track="1" data-src="https://files.catbox.moe/tn4nlx.wav" data-video="" data-title="honey bourbon" data-artist="jaydes" data-cover="https://i1.sndcdn.com/artworks-Q8nUU3tt6hNlWNdP-ehWdoA-t1080x1080.jpg">
@@ -109,11 +109,11 @@
             <p class="panel-track-artist">jaydes</p>
           </div>
         </article>
-        <article class="music-panel-card" data-track="2" data-src="https://files.catbox.moe/pynknc.wav" data-video="" data-title="brud" data-artist="boolymon" data-cover="https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg">
-          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg')"></div>
+        <article class="music-panel-card" data-track="2" data-src="https://files.catbox.moe/iokvoi.mp3" data-video="" data-title="feels good" data-artist="maxon" data-cover="https://i1.sndcdn.com/artworks-ynyxWyyy8zmMacbF-S2LRxA-t1080x1080.png">
+          <div class="panel-cover" style="background-image: url('https://i1.sndcdn.com/artworks-ynyxWyyy8zmMacbF-S2LRxA-t1080x1080.png')"></div>
           <div class="panel-info">
-            <p class="panel-track-title">brud</p>
-            <p class="panel-track-artist">boolymon</p>
+            <p class="panel-track-title">feels good</p>
+            <p class="panel-track-artist">maxon</p>
           </div>
         </article>
       </div>
@@ -121,9 +121,9 @@
   </div>
 
   <div class="media-tracks" aria-hidden="true">
-    <article class="music-card" data-track="0" data-src="https://files.catbox.moe/gaj8c7.wav" data-video="" data-title="reahp" data-artist="marjorie w.c sinclair" data-cover="https://i1.sndcdn.com/artworks-fkS9QjUdEtWtgGtU-0yxyWA-t1080x1080.jpg"></article>
+    <article class="music-card" data-track="0" data-src="https://files.catbox.moe/7w42g5.mp3" data-video="" data-title="penice2me" data-artist="lil watermark" data-cover="https://i1.sndcdn.com/artworks-4yXOxBhjyuHX3C5A-t1Yddw-t1080x1080.jpg"></article>
     <article class="music-card" data-track="1" data-src="https://files.catbox.moe/tn4nlx.wav" data-video="" data-title="honey bourbon" data-artist="jaydes" data-cover="https://i1.sndcdn.com/artworks-Q8nUU3tt6hNlWNdP-ehWdoA-t1080x1080.jpg"></article>
-    <article class="music-card" data-track="2" data-src="https://files.catbox.moe/pynknc.wav" data-video="" data-title="brud" data-artist="boolymon" data-cover="https://i1.sndcdn.com/artworks-XsrmQ4ky00PSrXec-vnPjyw-t1080x1080.jpg"></article>
+    <article class="music-card" data-track="2" data-src="https://files.catbox.moe/iokvoi.mp3" data-video="" data-title="feels good" data-artist="maxon" data-cover="https://i1.sndcdn.com/artworks-ynyxWyyy8zmMacbF-S2LRxA-t1080x1080.png"></article>
   </div>
 
   <footer class="footer glass">
